add flags to all workloads